--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ anyhow = "1.0.79"
 aws-config = { version = "1.1.5", features = ["behavior-version-latest"]}
 aws-sdk-bedrockruntime = "1.14.0"
 aws-types = "1.1.5"
+clap = { version = "4.5.0", features = ["derive"] }
 colored = "2.1.0"
 figlet-rs = "0.1.5"
 futures = "0.3.30"
