--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ clap = { version = "4.5.0", features = ["derive"] }
 colored = "2.1.0"
 figlet-rs = "0.1.5"
 futures = "0.3.30"
+ron = "0.8.1"
 serde = { version = "1.0.196", features = ["derive"] }
 serde_json = "1.0.113"
 tokio = { version = "1.36.0", features = ["full"] }
