--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "bedrust"
-version = "0.3.5"
+version = "0.3.6"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -18,4 +18,5 @@ futures = "0.3.30"
 ron = "0.8.1"
 serde = { version = "1.0.196", features = ["derive"] }
 serde_json = "1.0.113"
+termcolor = "1.4.1"
 tokio = { version = "1.36.0", features = ["full"] }
