--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,10 +11,13 @@ aws-config = { version = "1.1.5", features = ["behavior-version-latest"]}
 aws-sdk-bedrock = "1.15.0"
 aws-sdk-bedrockruntime = "1.14.0"
 aws-types = "1.1.5"
+base64 = "0.22.0"
 clap = { version = "4.5.0", features = ["derive"] }
 colored = "2.1.0"
 figlet-rs = "0.1.5"
 futures = "0.3.30"
+image = "0.25.0"
+rand = "0.8.5"
 ron = "0.8.1"
 serde = { version = "1.0.196", features = ["derive"] }
 serde_json = "1.0.113"
