--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,12 @@
 [package]
 name = "bedrust"
-version = "0.5.0"
+version = "0.5.1"
 edition = "2021"
+authors = ["Darko Mesaros <d@rko.rs>"]
+license = "MIT OR Apache-2.0"
+keywords = ["aws", "generativeai"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
 anyhow = "1.0.79"
 aws-config = { version = "1.1.5", features = ["behavior-version-latest"]}
