--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,9 @@ edition = "2021"
 authors = ["Darko Mesaros <d@rko.rs>"]
 license = "MIT OR Apache-2.0"
 keywords = ["aws", "generativeai", "bedrock", "chatbot"]
+readme = "README.md"
+homepage = "https://rup12.net"
+repository = "https://github.com/darko-mesaros/bedrust"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [dependencies]
