--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,8 @@ version = "0.7.0"
 edition = "2021"
 authors = ["Darko Mesaros <d@rko.rs>"]
 license = "MIT OR Apache-2.0"
-keywords = ["aws", "generativeai", "bedrock", "chatbot"]
+keywords = ["aws", "generative-ai", "bedrock", "chatbot"]
+categories = ["command-line-utilities", "generative-ai"]
 readme = "README.md"
 homepage = "https://rup12.net"
 repository = "https://github.com/darko-mesaros/bedrust"
