--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ aws-types = "1.1.5"
 base64 = "0.22.0"
 clap = { version = "4.5.0", features = ["derive"] }
 colored = "2.1.0"
+dialoguer = { version = "0.11.0", default-features = false, features = ["fuzzy-select", "completion"] }
 dirs = "5.0.1"
 figlet-rs = "0.1.5"
 futures = "0.3.30"
