--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -27,14 +27,15 @@ jobs:
     - uses: actions/checkout@v3
     - name: Build release
       run: cargo build --release --verbose
-    - name: Create release
       id: create_release
+    - name: Create release
       uses: actions/create-release@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        tag_name: ${{ github.ref }}
-        release_name: Release ${{ github.ref }}
+          #tag_name: ${{ github.ref }}
+        tag_name: v0.7.4
+        release_name: Release v0.7.4
         draft: false
         prerelease: false
     - name: Upload release asset
