--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -10,27 +10,44 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
-
-  build:
-    runs-on: ubuntu-latest
+  release_apple:
+    runs-on: macos-latest  # Use the macOS runner for Apple Silicon builds
 
     steps:
     - uses: actions/checkout@v3
-    - name: Build
-      run: cargo build --verbose
+    - name: Install Rust
+      run: |
+        curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
+        . "$HOME/.cargo/env"
+    - name: Build for Apple Silicon
+      run: |
+        cargo build --release --target aarch64-apple-darwin
+        mkdir dist
+        cp target/aarch64-apple-darwin/release/bedrust dist/
+    - name: Package Release
+      run: |
+        cd dist
+        zip -r release_aarch64-apple-darwin.zip .
+    - name: Create release
+      uses: ncipollo/release-action@v1
+      with:
+        artifacts: "release_aarch64-apple-darwin.zip"
 
-  release:
-    needs: build
+
+  release_x86:
     runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v3
     - name: Build release
-      run: cargo build --release --verbose
+      run: |
+        curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
+        . "$HOME/.cargo/env"
+        cargo build --release --verbose
       id: create_release
     - name: Package Release
-      run: zip -j release.zip target/release/bedrust
+      run: zip -j release_x86_Linux.zip target/release/bedrust
     - name: Create release
       uses: ncipollo/release-action@v1
       with:
-        artifacts: "release.zip"
+        artifacts: "release_x86_Linux.zip"
