--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,3 +37,5 @@ serde = { version = "1.0.198", features = ["derive"] }
 serde_json = "1.0.116"
 termcolor = "1.4.1"
 tokio = { version = "1.37.0", features = ["full"] }
+tree_magic = "0.2.3"
+walkdir = "2.5.0"
