--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,7 @@ rand = "0.8.5"
 ron = "0.8.1"
 serde = { version = "1.0.198", features = ["derive"] }
 serde_json = "1.0.116"
+tempfile = "3.10.1"
 termcolor = "1.4.1"
 tokio = { version = "1.37.0", features = ["full"] }
 tree_magic = "0.2.3"
