Fixes before 0.7.5 crates

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 authors = ["Darko Mesaros <d@rko.rs>", "Stephen Barr <stephen.barr@devfactory.com>", "Russel Cohen <rcoh@rcoh.me>"]
 license = "MIT OR Apache-2.0"
 keywords = ["aws", "generative-ai", "bedrock", "chatbot"]
-categories = ["command-line-utilities", "generative-ai"]
+categories = ["command-line-utilities"]
 readme = "README.md"
 homepage = "https://rup12.net"
 repository = "https://github.com/darko-mesaros/bedrust"
