--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ base64 = "0.22.1"
 chrono = "0.4.39"
 clap = { version = "4.5.30", features = ["derive"] }
 colored = "2.2.0"
+config = "0.15.8"
 convert_case = "0.6.0"
 dialoguer = { version = "0.11.0", default-features = false, features = ["fuzzy-select", "completion"] }
 dirs = "5.0.1"
@@ -43,3 +44,4 @@ serde = { version = "1.0.218", features = ["derive"] }
 serde_json = "1.0.139"
 termcolor = "1.4.1"
 tokio = { version = "1.43.0", features = ["full"] }
+toml = "0.8.20"
