--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,3 +43,4 @@ serde = { version = "1.0.198", features = ["derive"] }
 serde_json = "1.0.116"
 termcolor = "1.4.1"
 tokio = { version = "1.37.0", features = ["full"] }
+config = { version = "0.15.11", features = ["ron"] }
